--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Vacation World</title>
+  <title>Vacation World - Abhishek</title>
   <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
